# dmchain

./: .gitmodules  CMakeLists.txt  README.md  dmc_build  installer.txt
include/: emitter_plugin.h  js_value.h  object.h  types.h
include/ifs/: dmc.h
src/base/: dmc.cpp  eosapp.cpp  js_value.cpp  post.cpp
src/huginn/: CHANGES.md.rej  Gemfile  Gemfile.lock.rej  Gemfile.rej  README.md
src/huginn/app/assets/: all.csv
src/huginn/app/assets/stylesheets/: application.css.scss.erb.rej
src/huginn/app/models/: agent.rb  agent.rb.rej
src/huginn/app/models/agents/: digest_email_agent.rb  digest_email_agent.rb.rej  webhook_agent.rb.rej
src/huginn/data/: anew.csv
src/huginn/db/: schema.rb.rej
src/huginn/spec/models/: agent_spec.rb  agent_spec.rb.rej
src/net/: README.md
src/net/plugins/Sidebar/: SidebarPlugin.py
src/net/plugins/Sidebar/media/: Sidebar.coffee  Sidebar.coffee.rej  all.js  all.js.rej
src/net/src/: Config.py
src/net/src/Test/testdata/: sites.json  users.json
src/net/src/Ui/media/: all.js
src/net/src/lib/PySocks/test/: sockstest.py
src/net/src/lib/opensslVerify/: ReadMe.txt
src/net/tools/coffee/: coffee.cmd  coffee.wsf
src/net/tools/tor/: torrc
src/patch/eosio/: public_key.cpp
src/plugin/: emitter_plugin.cpp
src/shaarli/: .editorconfig.rej  .gitattributes.rej  .gitignore.rej  .travis.yml.rej  AUTHORS.rej  CHANGELOG.md.rej  COPYING  Dockerfile  Dockerfile.armhf  Dockerfile.armhf.rej  Dockerfile.rej  Makefile.rej  README.md  README.md.rej  composer.json.rej  index.php  index.php.rej  mkdocs.yml  phpcs.xml  phpcs.xml.rej  shaarli_version.php.rej
src/shaarli/application/: ApplicationUtils.php  Config.php  HttpUtils.php  HttpUtils.php.rej  Languages.php  Languages.php.rej  LinkDB.php  LinkDB.php.rej  LinkFilter.php  LinkFilter.php.rej  LinkUtils.php  LinkUtils.php.rej  PageBuilder.php  PageBuilder.php.rej  Updater.php  Updater.php.rej  Url.php  Url.php.rej  Utils.php  Utils.php.rej
src/shaarli/application/api/: ApiMiddleware.php  ApiUtils.php
src/shaarli/application/api/controllers/: Links.php  Links.php.rej
src/shaarli/application/bookmark/: BookmarkFileService.php  BookmarkFileService.php.rej  BookmarkFilter.php  BookmarkFilter.php.rej  BookmarkIO.php  BookmarkIO.php.rej  LinkDB.php  LinkDB.php.rej  LinkUtils.php  LinkUtils.php.rej
src/shaarli/application/config/: ConfigManager.php.rej
src/shaarli/application/container/: ContainerBuilder.php
src/shaarli/application/feed/: FeedBuilder.php  FeedBuilder.php.rej
src/shaarli/application/formatter/: BookmarkDefaultFormatter.php.rej  BookmarkMarkdownFormatter.php  BookmarkMarkdownFormatter.php.rej
src/shaarli/application/front/controller/admin/: ManageTagController.php  ServerController.php  ServerController.php.rej  ShaareManageController.php  ShaarePublishController.php  ThumbnailsController.php
src/shaarli/application/front/controller/visitor/: BookmarkListController.php  BookmarkListController.php.rej  DailyController.php  DailyController.php.rej  InstallController.php  PictureWallController.php  ShaarliVisitorController.php
src/shaarli/application/helper/: ApplicationUtils.php  DailyPageHelper.php.rej
src/shaarli/application/legacy/: LegacyLinkDB.php  LegacyLinkDB.php.rej
src/shaarli/application/netscape/: NetscapeBookmarkUtils.php.rej
src/shaarli/application/plugin/: PluginManager.php  PluginManager.php.rej
src/shaarli/application/updater/: Updater.php.rej
src/shaarli/assets/default/js/: base.js.rej  plugins-admin.js.rej
src/shaarli/assets/default/scss/: shaarli.scss  shaarli.scss.rej
src/shaarli/assets/vintage/js/: base.js.rej
src/shaarli/doc/md/: Browsing-and-searching.md  Browsing-and-searching.md.rej  Community-&-Related-software.md  Community-&-Related-software.md.rej  Community-and-related-software.md  Community-and-related-software.md.rej  Continuous-integration-tools.md.rej  Development-guidelines.md.rej  Directory-structure.md.rej  Download-and-Installation.md  Download-and-Installation.md.rej  Upgrade-and-migration.md.rej
src/shaarli/doc/md/dev/: Development.md  Development.md.rej  Release-Shaarli.md.rej  Unit-tests.md
src/shaarli/docker/alpine/: Dockerfile.master  Dockerfile.master.rej
src/shaarli/inc/: shaarli.css
src/shaarli/inc/languages/fr/LC_MESSAGES/: shaarli.po.rej
src/shaarli/plugins/default_colors/: default_colors.php
src/shaarli/plugins/demo_plugin/: demo_plugin.php
src/shaarli/plugins/markdown/: README.md  README.md.rej  markdown.php  markdown.php.rej
src/shaarli/plugins/qrcode/: qr-1.1.3.min.js  qrcode.html.rej
src/shaarli/plugins/wallabag/: wallabag.html.rej  wallabag.php  wallabag.php.rej
src/shaarli/tests/: ConfigTest.php  FeedBuilderTest.php  FeedBuilderTest.php.rej  LinkDBTest.php  LinkDBTest.php.rej  LinkFilterTest.php  LinkFilterTest.php.rej  LinkUtilsTest.php  UtilsTest.php.rej
src/shaarli/tests/Updater/: DummyUpdater.php  DummyUpdater.php.rej  UpdaterTest.php  UpdaterTest.php.rej
src/shaarli/tests/Url/: UrlTest.php  UrlTest.php.rej
src/shaarli/tests/api/controllers/links/: PostLinkTest.php
src/shaarli/tests/bookmark/: LinkUtilsTest.php
src/shaarli/tests/helper/: DailyPageHelperTest.php
src/shaarli/tests/legacy/: LegacyUpdaterTest.php  LegacyUpdaterTest.php.rej
src/shaarli/tests/plugins/: PluginMarkdownTest.php  PluginWallabagTest.php  PluginWallabagTest.php.rej
src/shaarli/tests/utils/: ReferenceLinkDB.php  ReferenceLinkDB.php.rej
src/shaarli/tpl/: linklist.html
src/shaarli/tpl/default/: includes.html.rej  linklist.html  linklist.html.rej  linklist.paging.html  linklist.paging.html.rej  page.footer.html  page.footer.html.rej  page.header.html  picwall.html.rej  pluginsadmin.html.rej
src/shaarli/tpl/default/css/: shaarli.css
src/shaarli/tpl/default/js/: shaarli.js.rej
src/shaarli/tpl/vintage/: changetag.html.rej  daily.html.rej  editlink.html.rej  includes.html.rej  linklist.html.rej  linklist.paging.html.rej  page.footer.html.rej  picwall.html.rej  pluginsadmin.html.rej  tools.html.rej
tools/: ildc.js
